--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
             <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
+    <section class="about-me flexible-container">
+        <div class="person-pic half-width">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>About Me</h1>
+            <p>Hi i am Hadia Eva. Welcome to my Food network. I would like to say that you can order food from us
+                without
+                any
+                hesitation. Because already we say that we provide healthy and delicious food. Food ordering from this
+                side is
+                so easy first you go to the website and select the food which one you like to order then give us your
+                information. After 5 or 10 minute your food will be delivered.</p>
+            <a class="link-button" target="_blank" href="https://github.com/STRTANBERAHMED">Contact me</a>
+        </div>
+    </section>
 </body>
 
 </html>
