food network added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="images/female/Person Image.png" alt="">
         </div>
         <div class="half-width">
-            <h1>About Me</h1>
+            <h2>About Me</h2>
             <p>Hi i am Hadia Eva. Welcome to my Food network. I would like to say that you can order food from us
                 without
                 any
@@ -42,6 +42,38 @@
             <a class="link-button" target="_blank" href="https://github.com/STRTANBERAHMED">Contact me</a>
         </div>
     </section>
+    <section class="recipies-area">
+        <h2>My Recipies</h2>
+        <p>Coconut Curry, Vegan Tzatkziki, Black Bean and Corn Salsa, Healthy Chicken Salad with Apple &
+            Cranberries,
+            Vegan
+            Pumkin Cake, Banana Cake, Steak, Kabab & Different Types of Soup.</p>
+        <div class="flexible-container">
+            <div class="recipe-item">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h3>Turkish Kabab</h3>
+                <p>Its a Turkish famous sis kabab. Traditionally, the meat used to make Turkish Kababs is lamb. It's
+                    ottoman's recipe.</p>
+            </div>
+            <div class="recipe-item">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Ribeye Steak</h3>
+                <p>Serve beef rib meat at least medium-rare, if not medium, to cook the fat running through it. This
+                    gives
+                    the meat lots of flavour – great with a red wine sauce</p>
+            </div>
+            <div class="recipe-item">
+                <img src="images/food/Project Cover.png" alt="">
+                <h3>Chicken Soup</h3>
+                <p>This soup made from chicken, simmered in water, usually with various other ingredients. The classic
+                    chicken soup consists of a clear chicken broth, often with pieces of chicken or vegetables.</p>
+            </div>
+        </div>
+    </section>
+    <footer class="food-network">
+        <h2><span class="orange-color">FOOD</span> NETWORK</h2>
+        <P>Eat healthy to live healthy. Live healthy to live happy</P>
+    </footer>
 </body>
 
 </html>
