--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
         </div>
     </section>
     <section class="recipies-area">
-        <h2>My Recipies</h2>
-        <p>Coconut Curry, Vegan Tzatkziki, Black Bean and Corn Salsa, Healthy Chicken Salad with Apple &
-            Cranberries,
-            Vegan
-            Pumkin Cake, Banana Cake, Steak, Kabab & Different Types of Soup.</p>
+        <div class="recipies">
+            <h2>My Recipies</h2>
+            <p>Coconut Curry, Vegan Tzatkziki, Black Bean and Corn Salsa, Healthy Chicken Salad with Apple &
+                Cranberries,
+                Vegan
+                Pumkin Cake, Banana Cake, Steak, Kabab & Different Types of Soup.</p>
+        </div>
         <div class="flexible-container">
             <div class="recipe-item">
                 <img src="images/food/Project Cover.jpg" alt="">
